test/rbkt/Queries/zorba/syntax_errors/DirElemConstructor_no_closing_tag.xq
(: 
  Syntax error with an improved error message:
  no closing tag found for direct element constructor
:)

<test>content
